# my-mvg-departures

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  README.docker.md  README.md  config.example.toml  cypress.config.ts  docker-compose.yml  env.example  fly.toml  fly.toml.example  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  docker-publish.yml  e2e.yml  integration-tests.yml  pages.yml  release.yml
alternatives/: index.html
alternatives/vvo-iframe/ostbahnhof/: index.html  index.js
cypress/e2e/: departures.cy.js
cypress/support/: commands.js
docker/: Dockerfile  Dockerfile.distroless  Dockerfile.optimized  Dockerfile.ubi
docs/: CONTRIBUTING.md  FINDING_STOP_IDS.md  STOP_POINT_DIFFERENTIATION.md  development.md
scripts/: README.md  analyze_complexity.ps1  analyze_complexity.py  analyze_complexity.sh  check_all_stations.ps1  check_all_stations.py  check_all_stations.sh  check_package_installed.py  common_env.ps1  common_env.sh  deploy-common.ps1  deploy-common.sh  find_station.py  get_python_version.py  install-service.ps1  install-service.sh  install.ps1  install.sh  integration-test.ps1  integration-test.sh  list_departures.ps1  list_departures.sh  list_routes.ps1  list_routes.sh  list_routes_db.ps1  list_routes_db.sh  list_routes_hafas.sh  list_routes_vbb.ps1  list_routes_vbb.sh  mvg-departures.initd  reformat.ps1  reformat.sh  restart.ps1  restart.sh  run-all-scripts.ps1  run-all-scripts.sh  setup-raspberry-pi.ps1  setup-raspberry-pi.sh  setup.ps1  setup.sh  (+15 more)
src/mvg_departures/: __init__.py  cli.py  cli_db.py  cli_hafas.py  cli_vbb.py  main.py
src/mvg_departures/adapters/: __init__.py  api_rate_limiter.py  api_request_logger.py  composite_departure_repository.py  config.py  mvg_api.py
src/mvg_departures/application/: __init__.py  (+1 more)
static/: .gitignore
static/css/: departures.css
static/js/: app.js  pyview-loader.js
tests/: __init__.py  test_admin_reset_connections.py  test_api_poller.py  test_api_rate_limiter.py  test_api_request_logger.py  test_architecture.py  test_bvg_profile.py  test_cli_functions.py  test_cli_integration.py  test_client_info.py  test_component_initialization.py  test_composite_departure_repository.py  test_config.py  test_departure_formatter.py  test_departure_grouping_calculator.py  test_departure_grouping_service_filtering.py  test_departures_liveview_helpers.py  test_liveview_configuration.py  test_models.py  test_presence_broadcaster.py  test_pyview_adapter_config.py  test_rate_limit_middleware.py  test_services.py  test_state_broadcaster.py  test_state_session_limits.py  test_template_parsing.py  test_template_rendering.py  test_vbb_integration.py
(+86 files in other folders)
