[project]
name = "my-mvg-departures"
version = "0.0.1"
description = "Live MVG departures display with server-side rendered UI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MPL-2.0"}
authors = [
    {name = "Dmitry Ledentsov"}
]
keywords = ["mvg", "public-transport", "munich", "departures", "liveview", "mvv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mvg>=1.6.0",
    "pyview-web>=0.7.0",  # Provides: pydantic>=2.11, starlette, wsproto, APScheduler, etc.
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",  # Depends on pydantic (transitive via pyview-web)
    "aiohttp>=3.11.0",
    "throttled-py>=3.0.0",
    "pyhafas>=0.6.1",  # HAFAS API client for public transport data
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-archon>=0.0.7",
    "black>=25.12.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-pytz>=2024.1.0",
]

[project.scripts]
mvg-departures = "mvg_departures.main:main"
mvg-config = "mvg_departures.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvg_departures"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "DTZ", "T10", "SIM", "ARG", "PIE", "PT", "RET", "TCH", "TID", "Q", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "mvg.*",
    "pyview.*",
    "tomli.*",
    "throttled.*",
    "pyhafas.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=mvg_departures --cov-report=term-missing --cov-report=html"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests that require network access (deselect with '-m \"not integration\"')",
]

